docs: up swagger and thunder
